--- a/styles.css
+++ b/styles.css
@@ -248,7 +248,7 @@ a {
 }
 
 .last-footer {
-    color: #fff;
+    color: #000;
     font-size: 12px;
     text-transform: uppercase;
     letter-spacing: 2px;
